Moving site over for now

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ header {
 .content-on-img > * {
   position: relative;
   z-index: 1;
-  max-width: 700px;
+  max-width: 1100px;
   margin: auto;
   flex: 1;
 }
@@ -158,14 +158,39 @@ nav a:hover {
   gap: 2rem;
 }
 
+.project-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 2rem;
+}
+
 .page-text {
     color: #FFA7D0;
     text-align: center;
-    /* padding-bottom: 1rem; */
     padding: 0rem 0rem 2rem;
-    max-width: 800px;
+    max-width: 1100px;
     margin: auto;
-    /* margin-top: 0rem; */
+}
+
+.tile-text {
+    color: #FFA7D0;
+    text-align: left;
+    padding: 1rem 0rem 2rem;
+    margin: auto;
+}
+
+.tile-list {
+    color: #FFA7D0;
+    text-align: left;
+    padding: 1rem 3rem 2rem;
+    margin: auto;
+    /* list-style-type:circle; */
+}
+
+li::marker {
+  content: "✓ ";
+  color: #FFA7D0;
+  font-size: 1.2em;
 }
 
 .card {
@@ -186,7 +211,7 @@ nav a:hover {
 
 section, h2 {
   padding: 2rem;
-  max-width: 800px;
+  max-width: 1100px;
   margin: auto;
 }
 
@@ -204,7 +229,7 @@ section, h2 {
 
 .info {
     padding: 2rem;
-    max-width: 800px;
+    max-width: 1100px;
     margin: auto;
 }
 
